# model_pager

./: .gitignore  README.md  cli_comfy.py  cli_debug.py  cli_diff.py  cli_run.py  convert_t5_to_fp16.py  pyproject.toml  requirements.txt  safetensor_parser.py  setup.cfg  setup.py  test.py  test2.py  wan_encoder.txt
csrc/: CMakeLists.txt  activation_pool.cpp  alloc_hook.cpp  binding.cpp  page_table.cpp  page_table.hpp  um_tensor.cpp  weight_pager.cu  weight_pager.hpp
docs/: check_1.md  check_2.md  kernels.md  plan_1.md
models/: wan.py  wan_comfy.py
pysrc/: __init__.py  _alloc.py  _pager.py  config.py  core.py  csrc_loader.py  file_indexing.py  flow_executor.py  flow_runner.py  flow_stub.py  flow_worker.py  meta_ops.py  micro_sched.py  models.py  page_manager.py  pager.py  scheduler.py  t5.py  tokenizer_utils.py  umt5.py
pysrc/pager/: __init__.py  comfy_patch.py  context.py  index.py  ops_paged.py  registry.py  rewriter.py  state.py
tests/: test_safetensors.py
