[build-system]
requires = ["setuptools>=70", "wheel", "torch>=2.3", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm_flow_plugin"
version = "0.0.1"
description = "Paged-flow extension for vLLM"
requires-python = ">=3.10"
dependencies = ["vllm>=0.6.6", "safetensors>=0.6"]

[project.entry-points."vllm.general_plugins"]
flow_plugin = "vllm_flow_plugin:register"

[tool.setuptools.packages.find]
where = ["model_pager/pysrc"]

[tool.setuptools.ext_modules]
