[build_ext]
inplace = 0

[options.ext_modules]
weight_pager = 
    sources = model_pager/csrc/weight_pager.cu
    extra_compile_args = 
        -std=c++17
        -O3
        -lineinfo
        --expt-relaxed-constexpr
    include_dirs = 
        model_pager/csrc
    libraries = cuda

activation_pool = 
    sources = model_pager/csrc/activation_pool.cpp
    extra_compile_args = -std=c++17 -O3
    libraries = cuda
